更新日時を修正