@@ -2,7 +2,6 @@ package mabubu0203.com.github.catcafe.api.controller.notice.helper.response;
 
 import java.time.ZoneOffset;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import mabubu0203.com.github.catcafe.api.controller.notice.service.model.output.NoticeSearchServiceOutput;
 import mabubu0203.com.github.catcafe.common.controller.mapper.response.SearchResponseMapper;
 import org.openapitools.model.Common;
@@ -16,7 +15,7 @@ public class NoticeSearchResponseMapper implements
   public NoticeSearchResponse apply(NoticeSearchServiceOutput noticeSearchServiceOutput) {
     var notices = noticeSearchServiceOutput.getNotices().stream()
         .map(this::convert)
-        .collect(Collectors.toList());
+        .toList();
 
     var result = new NoticeSearchResponse();
     result.setNotices(notices);
@@ -25,23 +24,25 @@ public class NoticeSearchResponseMapper implements
 
   private NoticeDetail convert(NoticeSearchServiceOutput.NoticeObject notice) {
     var detail = new NoticeDetail();
+    var common = this.common(notice.getCommon());
     detail.setId(notice.getId());
     detail.setStoreId(notice.getStoreId());
     detail.setSummary(notice.getSummary());
     detail.setDetail(notice.getDetail());
     detail.setPublicationStartDateTime(null);
     detail.setPublicationEndDateTime(null);
-
-    var common = new Common();
-    var commonObject = notice.getCommon();
-    common.setCreatedDateTime(commonObject.getCreatedDateTime().atOffset(ZoneOffset.ofHours(9)));
-    common.setVersion(commonObject.getVersion());
-    common.setUpdatedDateTime(
-        Optional.ofNullable(commonObject.getUpdatedDateTime())
-            .map(ldt -> ldt.atOffset(ZoneOffset.ofHours(9)))
-            .orElse(null));
     detail.setCommon(common);
     return detail;
+  }
+
+  private Common common(NoticeSearchServiceOutput.CommonObject object) {
+    var common = new Common();
+    common.setCreatedDateTime(object.getCreatedDateTime().atOffset(ZoneOffset.ofHours(9)));
+    common.setVersion(object.getVersion());
+    Optional.ofNullable(object.getUpdatedDateTime())
+        .map(ldt -> ldt.atOffset(ZoneOffset.ofHours(9)))
+        .ifPresent(common::setUpdatedDateTime);
+    return common;
   }
 
 }
